burger menu complete v1.1

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body class="main_container">
     <header class="header_menu">
-        <button class="header_menu_btn btn_cross"><img class="header_menu_img" src="./img/burger.png" alt=""></button>
-        <a class="header_menu_lnk" href="#"><img class="header_menu_img" src="./img/Group.png" alt=""></a>
-        <button class="header_menu_btn btn_search"><img class="header_menu_img" src="./img/search.png" alt=""></button>
+        <button class="header_menu_btn btn_cross"><img class="header_menu_img" src="./img/burger.png" alt="кнопка бургер-меню"></button>
+        <a class="header_menu_lnk" href="#"><img class="header_menu_img" src="./img/Group.png" alt="ссылка-логотип"></a>
+        <button class="header_menu_btn btn_search"><img class="header_menu_img" src="./img/search.png" alt="кнопка поиска"></button>
     </header>
     <section class="section_main">
         <nav class="list__container">
@@ -28,13 +28,13 @@
         <div class="foot_menu">
             <div class="foot_buttons">
                 <button class="foot_buttons_call foot_btn_style">
-                    <img class="foot_buttons_lnk" src="./img/chat copy.png" alt="">
+                    <img class="foot_buttons_lnk" src="./img/chat copy.png" alt="кнопка позвонить">
                 </button>
                 <button class="foot_buttons_chat foot_btn_style">
-                    <img class="foot_buttons_lnk" src="./img/chat.png" alt="">
+                    <img class="foot_buttons_lnk" src="./img/chat.png" alt="кнопка чата">
                 </button>
                 <button class="foot_buttons_profile foot_btn_style">
-                    <img class="foot_buttons_lnk" src="./img/profile.png" alt="">
+                    <img class="foot_buttons_lnk" src="./img/profile.png" alt="кнопка профиля">
                 </button>
             </div>
             <a class="foot_contacs_email" href="mailto:mail@cps.com">mail@cps.com</a>
