burger menu complete v1.2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="foot_menu">
-            <div class="foot_buttons">
+            <div>
                 <button class="foot_buttons_call foot_btn_style">
                     <img class="foot_buttons_lnk" src="./img/chat copy.png" alt="кнопка позвонить">
                 </button>
