burger menu complete v1.3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>burger_menu</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="main_container">
@@ -13,29 +13,21 @@
         <button class="header_menu_btn btn_search"><img class="header_menu_img" src="./img/search.png" alt="кнопка поиска"></button>
     </header>
     <section class="section_main">
-        <nav class="list__container">
-            <ul class="list__in">
-                <li class="list__item"><a class="list__item__link" href="#">Ремонт техники</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Услуги и сервисы</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Корпоративным клиентам</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Продавцам техники</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Партнерам</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Производителям</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Наши сервисные центры</a></li>
-                <li class="list__item"><a class="list__item__link" href="#">Контакты</a></li>
-            </ul>
-        </nav>
+        <ul class="list__in">
+            <li class="list__item"><a class="list__item__link" href="#">Ремонт техники</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Услуги и сервисы</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Корпоративным клиентам</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Продавцам техники</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Партнерам</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Производителям</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Наши сервисные центры</a></li>
+            <li class="list__item"><a class="list__item__link" href="#">Контакты</a></li>
+        </ul>
         <div class="foot_menu">
             <div>
-                <button class="foot_buttons_call foot_btn_style">
-                    <img class="foot_buttons_lnk" src="./img/chat copy.png" alt="кнопка позвонить">
-                </button>
-                <button class="foot_buttons_chat foot_btn_style">
-                    <img class="foot_buttons_lnk" src="./img/chat.png" alt="кнопка чата">
-                </button>
-                <button class="foot_buttons_profile foot_btn_style">
-                    <img class="foot_buttons_lnk" src="./img/profile.png" alt="кнопка профиля">
-                </button>
+                <button class="foot_buttons_call foot_btn_style"><img src="./img/chat copy.png" alt="кнопка позвонить"></button>
+                <button class="foot_buttons_chat foot_btn_style"><img src="./img/chat.png" alt="кнопка чата"></button>
+                <button class="foot_buttons_profile foot_btn_style"><img src="./img/profile.png" alt="кнопка профиля"></button>
             </div>
             <a class="foot_contacs_email" href="mailto:mail@cps.com">mail@cps.com</a>
             <a class="foot_contacs_tel" href="tel:+78008908900">8 800 890 8900</a>
